# bite_release

./: .gitignore  pyproject.toml  setup.py
src/: __init__.py
src/graph_networks/graphcmr/: graph_cnn_groundcontact_multistage.py
src/smal_pytorch/renderer/: differentiable_renderer.py
src/stacked_hourglass/: __init__.py  predictor.py
src/stacked_hourglass/utils/: pilutil.py  transforms.py
src/test_time_optimization/: bite_inference_model_for_ttopt.py
