[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bite"
version = "1.0.0"
description = "BITE: Beyond priors for Improved Three-D dog pose Estimation"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
dependencies = [
    "torch",
    "torchvision",
    "pytorch3d",
    "kornia",
    "matplotlib",
    "opencv-python",
    "trimesh",
    "scipy",
    "chumpy",
    "pymp",
    "importlib-resources",
    "pycocotools",
    "openpyxl",
    "dominate",
    "FrEIA @ git+https://github.com/runa91/FrEIA.git",
]

[tool.setuptools.packages.find]
where = ["src_link"]
